# dev-ops-mcp

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  main.py  mcp-init.sh  mcp-share-keys.sh  nginx.conf  pyproject.toml  requirements.txt
src/: main.py
src/api/: api_key.py  audit_log.py  auth.py  dashboard.py  mcp.py  project.py  user.py
src/apis/: api_key.py  audit_log.py  auth.py  automation.py  dashboard.py  project.py  public_command.py  task.py  terminal.py  user.py
src/db/: db.py  migrate.py  orm.py
src/dbs/: db.py  migrate.py  orm.py
src/dev_ops_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/middleware/: mcp_auth.py
src/middlewares/: mcp_auth.py
src/schema/: api.py  api_key.py  audit_log.py  auth.py  dashboard.py  project.py  user.py
src/schemas/: audit_log.py  automation.py  dashboard.py  project.py  public_command.py  task.py  user.py
src/tool/: mcp.py
src/tools/: mcp.py
src/util/: auth.py  context.py  executor.py  jwt.py  path.py
src/utils/: auth.py  context.py  executor.py  jwt.py  scheduler.py  security.py  ssh_client.py  task_executor.py
web/: .editorconfig  Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/components/: api-key-dialogs.tsx  api-key-table.tsx  audit-log-dialogs.tsx  audit-log-table.tsx  automation-dialog.tsx  automation-table.tsx  command-dialog.tsx  command-table.tsx  delete-dialog.tsx  execute-dialog.tsx  import-dialog.tsx  main-layout.tsx  project-dialogs.tsx  (+8 more)
(+26 files in other folders)
