[project]
name = "dev-ops-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "contextvars",
    "cryptography",
    "fastapi",
    "fastmcp",
    "mcp",
    "passlib[bcrypt]",
    "paramiko",
    "psutil",
    "pydantic",
    "python-dotenv",
    "python-jose",
    "sqlalchemy",
    "uvicorn",
]
